--- a/index.html
+++ b/index.html
@@ -92,7 +92,38 @@
             y:y
         };
 
+        /**
+         * Fix relative element
+         * @type {Element}
+         */
+        var container = window.document.getElementById("col-main-post-content");
 
+        function getRelativeCoordinates ( e ) {
+
+            var pos = {}, offset = {}, ref;
+
+            ref = container.offsetParent;
+
+            pos.x = !! e.touches ? e.touches[ 0 ].pageX : e.pageX;
+            pos.y = !! e.touches ? e.touches[ 0 ].pageY : e.pageY;
+
+            offset.left = container.offsetLeft;
+            offset.top = container.offsetTop;
+
+            while ( ref ) {
+
+                offset.left += ref.offsetLeft;
+                offset.top += ref.offsetTop;
+
+                ref = ref.offsetParent;
+            }
+
+            return {
+                x : pos.x - offset.left,
+                y : pos.y - offset.top,
+            };
+
+        }
         //console.log("x: " + x + "  y: " + y);
     }
 })();
