--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <script src="demos/demo.js"></script>
     <title>Waves</title>
 </head>
 <body>
@@ -15,7 +14,7 @@
         Particles:<input type="text" id="particles" value="1"><br>
         K const:<input type="text" id="kconst" value="-0.995"><br>
         <input type="hidden" id="framerate" value="0.03333333333333333"><br>
-        Friction:<input type="text" id="friction" value="-0.5"><br>
+        Friction:<input type="text" id="friction" value="-0.02"><br>
     </fieldset>
 </form>
 <form id="configParticle">
@@ -24,5 +23,6 @@
         Mass:<input type="text" id="mass" value="0.5"><br>
     </fieldset>
 </form>
+<script src="app.js"></script>
 </body>
 </html>
