--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Waves</title>
+    <style>
+        * {
+            display: none;
+        }
+    </style>
 </head>
 <body>
 
